--- a/LapinCouvert/LapinCouvert/appsettings.json
+++ b/LapinCouvert/LapinCouvert/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LapinCouvert-76595567-3648-4f26-8b5e-7e6d2c74b500;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LapinCouvert-76595567-3648-4f26-8b5e-7e6d2c74b500;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=LapinCouvertMVC;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
