PROGRES Messages Erreurs Produits

--- a/LapinCouvert/Models/Models.csproj
+++ b/LapinCouvert/Models/Models.csproj
@@ -17,4 +17,7 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.6" />
 	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Validations\" />
+	</ItemGroup>
 </Project>
