PROGRES Test unitaire pour inventaire

--- a/LapinCouvert/Tests/Tests.csproj
+++ b/LapinCouvert/Tests/Tests.csproj
@@ -19,6 +19,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\LapinCouvertAPI\LapinCouvertAPI.csproj" />
+    <ProjectReference Include="..\LapinCouvert\LapinCouvertMVC.csproj" />
+    <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 
   <ItemGroup>
